# docs/swagger.json
@@ -7,7 +7,7 @@
         "version": "0.1"
     },
     "paths": {
-        "/login": {
+        "/api/auth/login": {
             "post": {
                 "description": "accepts json sent by the user as input and authorize it",
                 "consumes": [
@@ -50,30 +50,7 @@
                 }
             }
         },
-        "/ping": {
-            "get": {
-                "description": "do ping",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "text/plain"
-                ],
-                "tags": [
-                    "example"
-                ],
-                "summary": "ping example",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "plain"
-                        }
-                    }
-                }
-            }
-        },
-        "/registration": {
+        "/api/auth/registration": {
             "post": {
                 "description": "accepts json sent by the user as input and registers it",
                 "consumes": [
@@ -112,6 +89,29 @@
                     },
                     "500": {
                         "description": "error: Failed to hash password. Please, try again later"
+                    }
+                }
+            }
+        },
+        "/ping": {
+            "get": {
+                "description": "do ping",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "example"
+                ],
+                "summary": "ping example",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "plain"
+                        }
                     }
                 }
             }
