# internal/transport/rest/authentication.go
@@ -1,8 +1,8 @@
 package rest
 
 import (
+	"math/rand"
 	"net/http"
-	"time"
 
 	"github.com/gin-gonic/gin"
 	"github.com/golang-jwt/jwt/v5"
@@ -12,7 +12,12 @@ import (
 	"golang.org/x/crypto/bcrypt"
 )
 
-// @BasePath /
+const (
+	accessLife  = 60 * 30
+	refreshLife = 3600 * 24
+)
+
+// @BasePath /auth/api/
 
 // Authentication godoc
 // @Summary authenticates the user
@@ -29,7 +34,7 @@ import (
 // @Failure 403 "error: Invalid email or password"
 // @Failure 500 "error: Invalid to create token"
 // @Failure 400 "error: Invalid to insert token"
-// @Router /login [post]
+// @Router /api/auth/login [post]
 func Authentication(c *gin.Context) {
 	body := models.LoginRequest{}
 	if c.Bind(&body) != nil {
@@ -50,7 +55,6 @@ func Authentication(c *gin.Context) {
 		})
 		return
 	}
-	user := &models.User{}
 	user, err := database.GetUser(body.Email)
 	if err != nil {
 		c.JSON(http.StatusForbidden, gin.H{
@@ -65,28 +69,88 @@ func Authentication(c *gin.Context) {
 		})
 		return
 	}
-	var jwtSecretKey = []byte(config.CFG.JWTSecretKey)
 
-	payload := jwt.MapClaims{
-		"sub": user.Email,
-		"exp": time.Now().Add(time.Hour * 24).Unix(),
+	userRefreshToken, err := database.GetTokenByUser(*user)
+	if err == nil {
+		err = database.UpdateTokenTime(*userRefreshToken)
+		if err != nil {
+			c.JSON(http.StatusInternalServerError, gin.H{
+				"error": "Server error! Pleas try again later",
+			})
+			return
+		}
+
+		c.JSON(http.StatusOK, gin.H{
+			"message": "Authentication was successful",
+		})
+		return
 	}
-	token := jwt.NewWithClaims(jwt.SigningMethodHS256, payload)
-	t, err := token.SignedString(jwtSecretKey)
+
+	accessToken, refreshToken, err := newTokens(*user)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{
 			"error": "Invalid to create token",
 		})
 		return
 	}
-	err = database.InsertToken(user.Id, t)
+
+	err = database.InsertToken(user.Id, refreshToken)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{
 			"error": "Invalid to insert token",
 		})
 		return
 	}
+
+	jwtCookie := http.Cookie{
+		Name:     "refreshToken",
+		Value:    refreshToken,
+		MaxAge:   refreshLife,
+		Path:     "/api/auth",
+		HttpOnly: true,
+	}
+
+	c.SetCookie(
+		jwtCookie.Name,
+		jwtCookie.Value,
+		jwtCookie.MaxAge,
+		jwtCookie.Path,
+		jwtCookie.Domain,
+		jwtCookie.Secure,
+		jwtCookie.HttpOnly,
+	)
+
 	c.JSON(http.StatusOK, gin.H{
-		"message": "Authentication was successful",
+		"message":      "Authentication was successful",
+		"accessToken":  accessToken,
+		"refreshToken": refreshToken,
 	})
+}
+
+func newTokens(user models.User) (string, string, error) {
+	var jwtSecretKey = []byte(config.CFG.JWTSecretKey)
+
+	accessPayload := jwt.MapClaims{
+		"email": user.Email,
+		"exp":   accessLife,
+	}
+
+	accessToken := jwt.NewWithClaims(jwt.SigningMethodHS256, accessPayload)
+	signedAccessToken, err := accessToken.SignedString(jwtSecretKey)
+	if err != nil {
+		return "", "", err
+	}
+
+	refreshPayload := jwt.MapClaims{
+		"sub": rand.Int(),
+		"exp": refreshLife,
+	}
+
+	refreshToken := jwt.NewWithClaims(jwt.SigningMethodHS256, refreshPayload)
+	signedRefreshToken, err := refreshToken.SignedString(jwtSecretKey)
+	if err != nil {
+		return "", "", err
+	}
+
+	return signedAccessToken, signedRefreshToken, nil
 }
